resolved layout issue with semantic-ui-react

--- a/app/src/features/map/styles.css
+++ b/app/src/features/map/styles.css
@@ -27,7 +27,7 @@
 }
 
 .chest {
-    background-image: url('/tiles/chest_2.png');
+    background-image: url('/tiles/chest.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
